# prekit-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
certs/: alpamayo-root-ca.crt
docs/: architecture.mmd
src/prekit_edge_node_api/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
src/prekit_edge_node_api/api/: __init__.py  activate_virtual_sensor_api.py  add_grafana_panel_api.py  add_grafana_signal_as_panel_api.py  allowed_file_formats_api.py  annotate_metrics_api.py  annotation_api.py  annotation_option_api.py  annotation_type_api.py  api_api.py  api_key_api.py  app_config_api.py  authentication_api.py  bind_data_tag_api.py  bulk_commission_api.py  cleanup_virtual_sensors_api.py  command_api.py  compare_signals_api.py  computation_api.py  computation_context_api.py  computations_bulk_assign_api.py  create_annotation_api.py  create_annotation_type_api.py  create_grafana_dashboard_api.py  create_grafana_folder_api.py  create_signal_api.py  create_system_element_api.py  data_tag_api.py  data_tag_context_api.py  data_tags_bulk_assign_api.py  deactivate_virtual_sensor_api.py  delete_grafana_dashboard_api.py  delete_grafana_folder_api.py  delete_system_element_api.py  detect_anomalies_api.py  (+71 more)
src/prekit_sdk/: __init__.py  auth.py  certs.py  client.py  helpers.py  historian.py  managers.py  models.py  tree.py
tests/: conftest.py  factories.py  test_auth.py  test_client.py  test_helpers.py  test_historian.py  test_historian_fetch.py  test_managers.py  test_models.py  test_models_navigation.py  test_tree.py  test_tree_parsing.py
(+244 files in other folders)
