[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prekit-sdk"
version = "0.1.0"
description = "User-friendly Python SDK for the PREKIT edge computing platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Alpamayo Solutions", email = "dev@alpamayo-solutions.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "prekit-edge-node-api>=1.10.0",
    "pandas>=2.0.0",
    "python-decouple",
    "msal>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "jupyter",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint]
ignore = ["E402", "E501", "F403"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
